Sat Dec  4 21:29:05 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb: (In previous commit) new method chown.

	* lib/fileutils.rb: (In previous commit) new method chown_R.

	* lib/fileutils.rb: (In previous commit) new method chmod_R
	  wrongly added.  Removed now.

Sat Dec  4 20:45:52 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (mkdir, mkdir_p): should chmod explicitly.
	  [ruby-core:03881]

Sat Dec  4 18:54:09 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb: removed empty lines from output.

Sat Dec  4 18:49:09 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::VERSION): 0.1.1 -> 0.1.2

	* lib/rss/rss.rb: #item=/#set_item and so on are obsolete.

Sat Dec  4 14:28:56 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/code_objects.rb (RDoc::Context::Section::set_comment):
	  Section comments may now be bracketed by lines which are
	  ignored. You can now write
	      # -----------
	      # :section: Dave's Section
	      # comment material
	      # -----------
	   The lines before :section: are removed, and identical lines at the end are 
	   also removed if present.

Fri Dec  3 12:25:21 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.h: fix prototype for C++.

Fri Dec  3 01:55:24 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: widget configuration by TkWindow#method_missing
	  returns proper object. "widget.option = val" returns val, and
	  "widget.option(val)" returns self.

	* ext/tk/lib/tk/font.rb: TkFont#replace accepts only one font argument.

	* ext/tk/lib/tk/radiobutton.rb: add TkRadiobutton#value and
	  TkRadiobutton#value=(val).

	* ext/tk/lib/tk/spinbox.rb: callback substitution support on
	  command option.

	* ext/tk/sample/demos-en/widget: bug fix (wrong image height)

	* ext/tk/sample/demos-jp/widget: ditto.

Fri Dec  3 00:21:05 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (proc_invoke): prepare to pass a block from "call" method